--- a/Atmosphair/Atmosphair.vcxproj
+++ b/Atmosphair/Atmosphair.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="src\ApplicationManager.cpp" />
     <ClCompile Include="src\Sensor.cpp" />
     <ClCompile Include="src\User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="src\ApplicationManager.h" />
     <ClInclude Include="src\Sensor.h" />
     <ClInclude Include="src\User.h" />
