--- a/Atmosphair/Atmosphair.vcxproj
+++ b/Atmosphair/Atmosphair.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="ApplicationManager.cpp" />
     <ClCompile Include="Data.cpp" />
+    <ClCompile Include="DataType.cpp" />
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="Sensor.cpp" />
     <ClCompile Include="User.cpp" />
@@ -28,6 +29,7 @@
   <ItemGroup>
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="Data.h" />
+    <ClInclude Include="DataType.h" />
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="Sensor.h" />
     <ClInclude Include="User.h" />
