--- a/Atmosphair/Atmosphair.vcxproj.filters
+++ b/Atmosphair/Atmosphair.vcxproj.filters
@@ -60,4 +60,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\x64\Debug\sauvegardes.txt">
+      <Filter>Fichiers sources</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
