--- a/Atmosphair/Atmosphair.vcxproj
+++ b/Atmosphair/Atmosphair.vcxproj
@@ -40,6 +40,9 @@
     <ClInclude Include="Sensor.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{84136468-52BF-4ABB-985E-B14928B55640}</ProjectGuid>
