--- a/Atmosphair/Atmosphair.vcxproj.filters
+++ b/Atmosphair/Atmosphair.vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
